made status text more visible and fixed errors.

--- a/themes/rework/misc.css
+++ b/themes/rework/misc.css
@@ -471,11 +471,13 @@
     max-width: 160px;
     color: white;
     font-family: Codex;
-    z-index: 5;
+    z-index: 10;
     margin: 0px;
 }
 
 #statusInfo span {
     font-size: 13px;
     align-self: center;
+    color: white;
+    filter: brightness(90%);
 }
